# Volume-ReSTIR-Vulkan

./: .gitignore  CIS 565 Milestone1.pptx  CMakeLists.txt  README.md  VDB Classes DOCS
cmake/: FindXCB.cmake
src/: .clang-format  CMakeLists.txt  Camera.cpp  Camera.hpp  GBuffer.cpp  GBuffer.hpp  GLTFSceneBuffers.cpp  GLTFSceneBuffers.h  RenderContext.cpp  RenderContext.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  Scene.cpp  Scene.hpp  ShaderIncludes.h  ShaderModule.cpp  ShaderModule.hpp  SingletonManager.hpp  SingtonManager.hpp  SwapChain.cpp  SwapChain.h  SwapChain.hpp  VDBLoader.cpp  VDBLoader.hpp  Vertex.hpp  VertexManager.cpp  VertexManager.hpp  Window.cpp  Window.h  Window.hpp  main.cpp  static_config.cpp  static_config.hpp
src/common/: gltf_loader.cpp  gltf_loader.hpp  obj_loader.cpp  obj_loader.h
src/config/: build_config.h.in  static_config.cpp  static_config.hpp
src/loader/: GLTFLoader.cpp  GLTFLoader.hpp
src/loaders/: VDBLoader.cpp  VDBLoader.hpp
src/model/: Cube.cpp  Cube.hpp  ModelBase.cpp  ModelBase.hpp  VDBModel.cpp  VDBModel.hpp  Vertex.hpp
src/passes/: restirPass.cpp  restirPass.h  spatialReusePass.cpp  spatialReusePass.h
src/shaders/: anim.comp  frag_shader.frag  graphics.frag  graphics.vert  host_device.h  lambert.frag  lambert.vert  passthrough.vert  post.frag  raycommon.glsl  raytrace.rchit  raytrace.rgen  raytrace.rint  raytrace.rmiss  raytrace2.rchit  raytraceShadow.rmiss  restir.rchit  restir.rgen  restir.rmiss  restir2.rchit  restirShadow.rmiss  restir_post.frag  restir_quad.vert  restircommon.glsl  spatialReuse.comp  vert_shader.vert  wavefront.glsl
src/shaders/Headers/: DebugConstants.glsl  binding.glsl  common.glsl  raycommon.glsl  reservoir.glsl
src/shaders/headers/: common.glsl  debugConstants.glsl  disneyBRDF.glsl  math.glsl  random.glsl  reservoir.glsl  restirUtils.glsl
src/shaders/nvvk/: post.frag  quad.vert  restir.rchit  restir.rgen  restir.rmiss  spatialReuse.comp
src/shaders/nvvkShaders/Shader_Files/: post.frag.spv  quad.vert.spv  restir.rchit.spv  restir.rgen.spv  restir.rmiss  restir.rmiss.spv  restirShadow.rmiss  restirShadow.rmiss.spv  spatialReuse.comp  spatialReuse.comp.spv
src/shaders/nvvkShaders/Shader_Headers/: disneyBRDF.glsl  random.glsl  restirUtils.glsl
src/shaders/nvvkShaders/Shader_Structs/: light.glsl  restirStructs.glsl
src/shaders/structs/: light.glsl  restirStructs.glsl  sceneStructs.glsl
src/utils/: GeneralUtils.cpp  GeneralUtils.h  ShaderIncludes.h  buffer.cpp  buffer.hpp  logging.hpp  nvvkUtils.cpp  nvvkUtils.h  restir_utils.cpp  restir_utils.h  shader_functions.hpp  vkqueue_utils.hpp
src/vdb/: .clang-format  BoundBox.cpp  BoundBox.h  Camera.h  Grid.cpp  Grid.h  Plane.h  Shader.h  ShaderFamily.h  ShaderLibrary.h  Types.h  Utilities.cpp  Utilities.h  vdb.cpp  vdb.h
test/: CMakeLists.txt  openvdb_test.cpp  openvdb_test_2.cpp
